# overllm

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
examples/: needless_llm_calls.py
scripts/: scan_corpus.py
skills/overllm/: SKILL.md
src/overllm/: __init__.py  analyze.py  baseline.py  cli.py  config.py  detector.py  fix.py  jsdetector.py  mcp_server.py  models.py  report.py  rules.py
tests/: test_baseline.py  test_cli.py  test_fix.py  test_js.py  test_mcp_server.py  test_recall.py  test_report.py  test_robustness.py  test_rules.py  test_wrappers.py
