[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overllm"
version = "0.1.3"
description = "Catch the LLM/AI calls you didn't need. A fast, deterministic linter that flags LLM API calls where plain code is simpler, cheaper, and more reliable."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Adam Danielsson", email = "the.adam.danielsson@gmail.com" }]
keywords = ["linter", "llm", "ai", "static-analysis", "pre-commit", "openai", "anthropic", "cost", "code-quality"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/theadamdanielsson/overllm"
Issues = "https://github.com/theadamdanielsson/overllm/issues"

[project.scripts]
overllm = "overllm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/overllm"]

[tool.overllm]
# example config; all optional
# ignore = ["llm-in-loop"]
# exclude = ["examples/", "tests/fixtures/"]
