[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overllm"
version = "0.6.1"
description = "Catch the LLM/AI calls you didn't need. A fast, deterministic linter that flags LLM API calls where plain code is simpler, cheaper, and more reliable."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Adam Danielsson", email = "the.adam.danielsson@gmail.com" }]
keywords = ["linter", "llm", "ai", "static-analysis", "pre-commit", "openai", "anthropic", "cost", "code-quality", "gpt", "claude", "llm-cost", "llm-linter", "tokens", "prompt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/theadamdanielsson/overllm"
Issues = "https://github.com/theadamdanielsson/overllm/issues"

[project.scripts]
overllm = "overllm.cli:main"
overllm-mcp = "overllm.mcp_server:main"

[project.optional-dependencies]
js = [
  "tree-sitter>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
]
mcp = [
  "mcp>=1.2,<2; python_version >= '3.10'",
  "tree-sitter>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
]
dev = [
  "pytest>=7",
  "mcp>=1.2,<2; python_version >= '3.10'",
  "tree-sitter>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/overllm"]

[tool.overllm]
# example config; all optional
# ignore = ["llm-in-loop"]
# exclude = ["examples/", "tests/fixtures/"]
